# secscan

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml
docs/: AGILE.md  ARCHITECTURE.md  BASELINES.md  DEFINITION_OF_DONE.md  FILESYSTEM_SCANNING.md  HISTORY.md  POLICIES.md  ROADMAP.md
scripts/: verify_wheel.py
secscan/: __init__.py  cli.py  compare.py  history.py  models.py  normalize.py  policy.py  report.py  trivy.py
secscan/scanners/: __init__.py  base.py  filesystem.py  image.py  registry.py
tests/: test_cli_baseline.py  test_cli_version.py  test_comparison.py  test_filesystem_scanner.py  test_history.py  test_normalize.py  test_package_integrity.py  test_policy.py  test_policy_configuration.py  test_report.py  test_report_target_type.py  test_scanner_registry.py
