[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "secscan"
version = "0.1.0"
description = "Container-first security scanner orchestration and normalization"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.3,<9"]

[project.scripts]
secscan = "secscan.cli:main"

[tool.setuptools]
packages = ["secscan"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
