[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "secscan"
version = "0.1.0"
description = "Container-first security scanner orchestration and normalization"
requires-python = ">=3.12"
dependencies = [
  "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "mypy>=1.11,<3",
  "pytest>=8.3,<9",
  "ruff>=0.6,<1",
  "types-PyYAML>=6.0,<7",
]

[project.scripts]
secscan = "secscan.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["secscan*"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E9", "F"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
files = ["secscan"]
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
